--- a/WebShopREST/WebShopREST/WebContent/html/delivererRegister.html
+++ b/WebShopREST/WebShopREST/WebContent/html/delivererRegister.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="register.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../css/delivererRegister.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
+	<header id="titleRectangle">
+		<h1 id="titleText">WebShop</h1>
+	</header>
     <div class="container">
-        <div class="text">Registracija</div>
+        <div class="text">Registracija Dobavljača</div>
         <form action="#">
             <div class="data">
                 <label>Korisničko ime *</label>
@@ -15,7 +18,7 @@
             </div>
             <div class="data">
                 <label>Lozinka *</label>
-                <input type="password" value="aaaa" required/>
+                <input type="password" required/>
             </div>
             <div class="data">
                 <label>Ime *</label>
@@ -39,11 +42,10 @@
             </div>
             <div class="btn">
                 <div class="inner"></div>
-                <button type="submit">Registruj se</button>
+                <button type="submit">Registruj</button>
             </div>
-            <div class="logIn-link">Imate nalog? <a href="login.html">Prijavite se ovde.</a></div>
         </form>
     </div>
-    <div style="min-height: 140px;"></div>
+    <div style="min-height: 20px;"></div>
 </body>
 </html>
