--- a/WebShopREST/WebShopREST/WebContent/html/index.html
+++ b/WebShopREST/WebShopREST/WebContent/html/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="index.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/index.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -38,7 +38,7 @@
 				<option>4</option>
 				<option>5</option>
 			</select>
-			<input id="searchIcon" type="image" src="searchIcon.png" />
+			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
 		<div style="padding-left: 3%; padding-top: 15px;">
 			<label style="padding-right: 40px"  class="searchText">Filter:</label>
@@ -66,7 +66,7 @@
 
 			<tbody id="tableBody">
 				<tr>
-					<td><img class="photo" src="chinese.png" alt="Slika"/></td>
+					<td><img class="photo" src="../images/chinese.png" alt="Slika"/></td>
 					<td>Restoran 1</td>
 					<td>Batutova 5, Beograd, Srbija</td>
 					<td>Kineski</td>
@@ -74,7 +74,7 @@
 					<td>Da</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="italian.png" alt="Slika" /></td>
+					<td><img class="photo" src="../images/italian.png" alt="Slika" /></td>
 					<td>Restoran 2</td>
 					<td>Cara Dušana 2, Novi Sad, Srbija</td>
 					<td>Italijanski</td>
@@ -82,7 +82,7 @@
 					<td>Da</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="barbeque.png" alt="Slika" /></td>
+					<td><img class="photo" src="../images/barbeque.png" alt="Slika" /></td>
 					<td>Restoran 3</td>
 					<td>Vlaška 23, Zagreb, Hrvatska</td>
 					<td>Roštilj</td>
