--- a/WebShopREST/WebShopREST/WebContent/html/manager.html
+++ b/WebShopREST/WebShopREST/WebContent/html/manager.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="manager.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/manager.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -28,7 +28,7 @@
                 <th>
                     <td>
                         <div class="container-pic">
-                            <img src="italian.png" style="width: 210px;"/>
+                            <img src="../images/italian.png" style="width: 210px;"/>
                         </div>
                     </td>
                 </th>
@@ -69,7 +69,7 @@
 		<div style="padding-left: 3%;">
 			<label class="searchText">Pretraga:</label>
 			<input id="inputBox" type="text" placeholder="Naziv artikla" />
-			<input id="searchIcon" type="image" src="searchIcon.png" />
+			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
         <div style="padding-left: 3%; padding-top: 15px;">
 			<label style="padding-right: 40px"  class="searchText">Filter:</label>
@@ -94,7 +94,7 @@
 		
 			<tbody id="tableBody">
 				<tr>
-					<td><img src="ketchup.png" style="width: 100px;"></td>
+					<td><img src="../images/ketchup.png" style="width: 100px;"></td>
 					<td>Kečap</td>
 					<td>89.99</td>
 					<td>Jelo</td> 
@@ -102,7 +102,7 @@
 					<td>preliv od paradajza</td>
 				</tr>
 				<tr>
-					<td><img src="mayonnaise.png" style="width: 100px;"></td>
+					<td><img src="../images/mayonnaise.png" style="width: 100px;"></td>
 					<td>Majonez</td>
 					<td>94.99</td>
 					<td>Jelo</td> 
@@ -110,7 +110,7 @@
 					<td>preliv od jaja</td>
 				</tr>
 				<tr>
-					<td><img src="spaghetti.png" style="width: 100px;"></td>
+					<td><img src="../images/spaghetti.png" style="width: 100px;"></td>
 					<td>Špagete sa ćuftama</td>
 					<td>340</td>
 					<td>Jelo</td> 
@@ -118,7 +118,7 @@
 					<td>italijansko tradicionalno jelo sa testeninom, prelivima i mesom</td>
 				</tr>
 				<tr>
-					<td><img src="cola.png" style="width: 100px;"></td>
+					<td><img src="../images/cola.png" style="width: 100px;"></td>
 					<td>Coca Cola</td>
 					<td>110</td>
 					<td>Piće</td> 
