--- a/WebShopREST/WebShopREST/WebContent/html/orders_and_buyers_of_restaurant.html
+++ b/WebShopREST/WebShopREST/WebContent/html/orders_and_buyers_of_restaurant.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="manager.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/manager.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -18,7 +18,7 @@
 		<div style="padding-left: 3%;">
 			<label class="searchText">Pretraga:</label>
 			<input class="inputBoxes" type="text" placeholder="" />
-			<input id="searchIcon" type="image" src="searchIcon.png" />
+			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
         <br>
 		<table id="articlesTable">
@@ -50,7 +50,7 @@
 		<div style="padding-left: 3%;">
 			<label class="searchText">Pretraga:</label>
 			<input class="inputBoxes" type="text" placeholder="" />
-			<input id="searchIcon" type="image" src="searchIcon.png" />
+			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
         <br>
 		<table id="articlesTable">
