--- a/WebShopREST/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurant.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="restaurant.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/restaurant.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -26,7 +26,7 @@
                 <th>
                     <td>
                         <div class="container-pic">
-                            <img src="chinese.png" style="width: 210px;"/>
+                            <img src="../images/chinese.png" style="width: 210px;"/>
                         </div>
                     </td>
                 </th>
@@ -69,27 +69,35 @@
 			<thead>
 				<th>Slika</th>
 				<th>Naziv</th>
-				<th>Opis</th>
 				<th>Cena</th>
+				<th>Tip</th>
+				<th>Količina</th>
+				<th>Opis</th>
 			</thead>
 			<tbody id="tableBody">
 				<tr>
-					<td><img class="photo" src="riblja_corba.png" alt="Slika" /></td>
+					<td><img class="photo" src="../images/riblja_corba.png" alt="Slika" /></td>
 					<td>Riblja čorba</td>
-					<td>Riba, razno povrće, začini</td>
 					<td>200 RSD</td>
+					<td>Jelo</td>
+					<td>250ml</td>
+					<td>Riba, razno povrće, začini</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="kebab.png" alt="Slika" /></td>
+					<td><img class="photo" src="../images/kebab.png" alt="Slika" /></td>
 					<td>Ćevapi</td>
-					<td>Svinjsko meso, razno povrće</td>
 					<td>300 RSD</td>
+					<td>Jelo</td>
+					<td>250mg</td>
+					<td>Svinjsko meso, razno povrće</td>
 				</tr>
 				<tr>
-					<td><img class="photo" src="juice.png" alt="Slika" /></td>
+					<td><img class="photo" src="../images/juice.png" alt="Slika" /></td>
 					<td>Fanta Orange</td>
+					<td>200 RSD</td>
+					<td>Piće</td>
+					<td>200ml</td>
 					<td>Gazirani sok</td>
-					<td>250 RSD</td>
 				</tr>
 			</tbody>
 		</table>
@@ -110,13 +118,13 @@
 			<tbody id="tableBody">
 				<tr>
 					<td>stefo</td>
-					<td>5</td>
-					<td>Najbolji ćevapi u gradu!</td>
+					<td>1</td>
+					<td>Uz hranu mi nije stigao sok!</td>
 				</tr>
 				<tr>
 					<td>mica</td>
-					<td>1</td>
-					<td>Stigla mi je hladna riblja čorba..</td>
+					<td>5</td>
+					<td>Najbolji ćevapi u gradu!</td>
 				</tr>
 			</tbody>
 		</table>
