--- a/WebShopREST/WebShopREST/WebContent/html/userProfile.html
+++ b/WebShopREST/WebShopREST/WebContent/html/userProfile.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="userProfile.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/userProfile.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <header id="titleRectangle">
@@ -26,7 +26,7 @@
                 <th>
                     <td>
                         <div class="container-pic">
-                            <img src="user-pic.svg"/>
+                            <img src="../images/user-pic.svg"/>
                         </div>
                     </td>
                 </th>
@@ -78,7 +78,6 @@
 					<th>Artikli</th>
 					<th>Datum i vreme porudžbine</th>
 					<th>Cena</th>
-                    <th>Kupac</th>
                     <th>Status</th>
 				</tr>
 			</thead>
@@ -88,7 +87,6 @@
 					<td>Špagete sa ćuftama, Kečap</td>
 					<td>01.01.2021. 13:30</td>
 					<td>429.99</td> 
-					<td>Milica Tomić</td>
 					<td>Dostavljena</td>
 				</tr>
 			</tbody>
