--- a/WebShopREST/WebShopREST/WebContent/html/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/html/administrator.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="administrator.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/administrator.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -24,7 +24,7 @@
 			<input class="inputBoxes" type="text" placeholder="Ime korisnika" />
 			<input class="inputBoxes" type="text" placeholder="Prezime korisnika" />
 			<input class="inputBoxes" type="text" placeholder="Korisničko ime" />
-			<input id="searchIcon" type="image" src="searchIcon.png" />
+			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
 		<div style="padding-left: 3%; padding-top: 15px;">
 			<label style="padding-right: 40px"  class="searchText">Filter:</label>
