--- a/WebShopREST/WebShopREST/WebContent/html/login.html
+++ b/WebShopREST/WebShopREST/WebContent/html/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="login.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/login.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <div class="center">
