--- a/WebShopREST/WebShopREST/WebContent/html/register.html
+++ b/WebShopREST/WebShopREST/WebContent/html/register.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="managerRegister.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+    <meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../css/register.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
-	<header id="titleRectangle">
-		<h1 id="titleText">WebShop</h1>
-	</header>
     <div class="container">
-        <div class="text">Registracija Menadžera</div>
+        <div class="text">Registracija</div>
         <form action="#">
             <div class="data">
                 <label>Korisničko ime *</label>
@@ -18,7 +15,7 @@
             </div>
             <div class="data">
                 <label>Lozinka *</label>
-                <input type="password" required/>
+                <input type="password" value="aaaa" required/>
             </div>
             <div class="data">
                 <label>Ime *</label>
@@ -42,10 +39,11 @@
             </div>
             <div class="btn">
                 <div class="inner"></div>
-                <button type="submit">Registruj</button>
+                <button type="submit">Registruj se</button>
             </div>
+            <div class="logIn-link">Imate nalog? <a href="login.html">Prijavite se ovde.</a></div>
         </form>
     </div>
-    <div style="min-height: 20px;"></div>
+    <div style="min-height: 140px;"></div>
 </body>
 </html>
