--- a/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="restaurantAdd.css"/>
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/restaurantAdd.css"/>
+	<script src="../jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
