--- a/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
@@ -21,9 +21,9 @@
                 <label>Tip *</label>
                 <select id="type" style="cursor: pointer;" required>
 					<option value="">Izaberi tip restorana</option>
-					<option value="1">Kineski</option>
-					<option value="2">Italijanski</option>
-					<option value="3">Roštilj</option>
+					<option value="Kineski">Kineski</option>
+					<option value="Italijanski">Italijanski</option>
+					<option value="Roštilj">Roštilj</option>
 				</select>
             </div>
             <div class="data">
