validacije za dodavanje restorana

--- a/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
+++ b/WebShopREST/WebShopREST/WebContent/html/restaurantAdd.html
@@ -15,11 +15,11 @@
         <form id="forma" action="#">
             <div class="data">
                 <label>Naziv *</label>
-                <input id="name" type="text" required/>
+                <input id="name" type="text"/>
             </div>
             <div class="data">
                 <label>Tip *</label>
-                <select id="type" style="cursor: pointer;" required>
+                <select id="type" style="cursor: pointer;">
 					<option value="">Izaberi tip restorana</option>
 					<option value="Kineski">Kineski</option>
 					<option value="Italijanski">Italijanski</option>
@@ -28,23 +28,23 @@
             </div>
             <div class="data">
                 <label>Adresa *</label>
-                <input id="location" type="text" required/>
+                <input id="location" type="text"/>
             </div>
             <div class="data">
                 <label>Geografska dužina *</label>
-                <input id="length" type="text" required/>
+                <input id="length" type="text"/>
             </div>
             <div class="data">
                 <label>Geografska širina *</label>
-                <input id="width" type="text" required/>
+                <input id="width" type="text"/>
             </div>
             <div class="data">
                 <label>Logo *</label>
-                <input id="logo" type='file' required/>
+                <input id="logo" type='file'/>
             </div>
             <div class="data">
                 <label>Menadžer *</label>
-                <select style="cursor: pointer;">
+                <select id="manager" style="cursor: pointer;">
                     <option value="">Izaberi menadžera</option>
                     <option value="1">pero</option>
                     <option value="2">marija</option>
