rad na projektu

--- a/WebShopREST/WebShopREST/WebContent/html/register.html
+++ b/WebShopREST/WebShopREST/WebContent/html/register.html
@@ -34,8 +34,8 @@
                 <label>Pol *</label>
                 <select id="gender" style="cursor: pointer;">
                 	<option value="0">Izaberi pol</option>
-                    <option value="Muški">Muški</option>
-                    <option value="Ženski">Ženski</option>
+                    <option value="MALE">Muški</option>
+                    <option value="FEMALE">Ženski</option>
                 </select>
             </div>
             <div class="data">
