--- a/WebShopREST/WebShopREST/WebContent/html/register.html
+++ b/WebShopREST/WebShopREST/WebContent/html/register.html
@@ -33,7 +33,7 @@
             <div class="data">
                 <label>Pol *</label>
                 <select id="gender" style="cursor: pointer;">
-                	<option value="0">Izaberi pol</option>
+                	<option value="">Izaberi pol</option>
                     <option value="MALE">Muški</option>
                     <option value="FEMALE">Ženski</option>
                 </select>
