filtriranje i pretrazivanje korisnika

--- a/WebShopREST/WebShopREST/WebContent/html/index.html
+++ b/WebShopREST/WebShopREST/WebContent/html/index.html
@@ -27,7 +27,7 @@
 			<input id="searchLocation" name="searchLocation" class="inputBoxes" type="text" placeholder="Lokacija restorana">
 			<input id="searchGrade" name="searchGrade" class="inputBoxes" type="text" placeholder="Ocena restorana">
 			<select id="searchType" name="searchType" class="dropdownBoxes">
-				<option selected="selected" value="0">Tip restorana</option>
+				<option selected="selected" value="Tip restorana">Tip restorana</option>
 				<option value="Kineski">Kineski</option>
 				<option value="Italijanski">Italijanski</option>
 				<option value="Roštilj">Roštilj</option>
@@ -59,7 +59,7 @@
 			</thead>
 
 			<tbody id="tableBody">
-				
+			
 			</tbody>
 		</table>
 	</div>
