--- a/WebShopREST/WebShopREST/WebContent/html/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/html/administrator.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/administrator.css"/>
 	<script src="../jquery-3.3.1.min.js"></script>
+	<script src="../js/administrator.js"></script>
 </head>
 <body>
 	<header id="titleRectangle">
@@ -21,170 +22,44 @@
 		<br /><br />
 		<div style="padding-left: 3%;">
 			<label class="searchText">Pretraga:</label>
-			<input class="inputBoxes" type="text" placeholder="Ime korisnika" />
-			<input class="inputBoxes" type="text" placeholder="Prezime korisnika" />
-			<input class="inputBoxes" type="text" placeholder="Korisničko ime" />
+			<input id="searchName" class="inputBoxes" type="text" placeholder="Ime korisnika" />
+			<input id="searchSurname" class="inputBoxes" type="text" placeholder="Prezime korisnika" />
+			<input id="searchUsername" class="inputBoxes" type="text" placeholder="Korisničko ime" />
 			<input id="searchIcon" type="image" src="../images/searchIcon.png" />
 		</div>
 		<div style="padding-left: 3%; padding-top: 15px;">
 			<label style="padding-right: 40px"  class="searchText">Filter:</label>
-			<select class="dropdownBoxes">
-				<option selected="selected" value="0">Uloga korisnika</option>
-				<option value="1">Menadžer</option>
-			 	<option value="2">Dobavljač</option>
-				<option value="3">Kupac</option>
-				<option value="4">Administrator</option>
-			</select>
-			<select class="dropdownBoxes">
-				<option selected="selected" value="0">Tip kupca</option>
-				<option value="1">Zlatni</option>
-			 	<option value="2">Srebrni</option>
-				<option value="3">Bronzani</option>
+			<select class="dropdownBoxes" id="buyerType">
+				<option selected="selected" value="Tip kupca">Tip kupca</option>
+				<option value="GOLDEN">Zlatni</option>
+			 	<option value="SILVER">Srebrni</option>
+				<option value="BRONZE">Bronzani</option>
 			</select>
 		</div>
 		<div style="height: 50px;"></div>
-		<div style="text-align: center; margin: 0 auto; width: 600px;">
+		<div style="text-align: center; margin: 0 auto; width: 800px;">
 			<button class="administratorBtns">Obriši korisnika</button>
-			<button class="administratorBtns" id="delivererAdd">Dodaj dobavljača</button>
+			<button class="administratorBtns" id="delivererAdd">Dodaj dostavljača</button>
 			<button class="administratorBtns" id="managerAdd">Dodaj menadžera</button>
 			<button class="administratorBtns" id="restaurantAdd">Dodaj restoran</button>
 		</div>
 		<div style="height: 50px;"></div>
+		<div>
+			<button class="tabBtns" style="background-color: rgb(140, 140, 140);" id="buyers">Kupci</button>
+			<button class="tabBtns" id="managers">Menadžeri</button>
+			<button class="tabBtns" id="deliverers">Dostavljači</button>
+			<button class="tabBtns" id="administrators">Administratori</button>
+		</div>
+		<div style="height: 15px;"></div>
 		<table id="usersTable">
-			<thead>
-				<tr>
-					<th onclick="sortTable(0)">Korisničko ime</th>
-					<th onclick="sortTable(1)">Ime</th> 
-					<th onclick="sortTable(2)">Prezime</th>
-					<th>Pol</th> 
-					<th>Datum rođenja</th>
-					<th>Lozinka</th>
-					<th>Uloga</th>
-					<th onclick="sortTable(7)">Broj bodova</th>
-				</tr>
+			<thead id="tableHeader">
+				
 			</thead>
 		
 			<tbody id="tableBody">
-				<tr>
-					<td>pero</td>
-					<td>Pero</td>
-					<td>Perić</td>
-					<td>Muško</td> 
-					<td>10.10.1990.</td>
-					<td>123</td>
-					<td>Menadžer</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>mica</td>
-					<td>Milica</td>
-					<td>Tomić</td>
-					<td>Žensko</td> 
-					<td>5.5.1995.</td>
-					<td>456</td>
-					<td>Kupac</td>
-					<td>2500</td>
-				</tr>
-				<tr>
-					<td>petar</td>
-					<td>Petar</td>
-					<td>Petrović</td>
-					<td>Muško</td> 
-					<td>15.2.1993.</td>
-					<td>789</td>
-					<td>Dostavljač</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>stefo</td>
-					<td>Stefan</td>
-					<td>Savić</td>
-					<td>Muško</td> 
-					<td>25.12.2002.</td>
-					<td>stefke</td>
-					<td>Kupac</td>
-					<td>5500</td>
-				</tr>
-				<tr>
-					<td>mara</td>
-					<td>Mara</td>
-					<td>Marić</td>
-					<td>Žensko</td> 
-					<td>20.2.1976.</td>
-					<td>12345</td>
-					<td>Administrator</td>
-					<td>-</td>
-				</tr>
+				
 			</tbody>
 		</table>
 	</div>
-	
-	<script>
-		$(document).ready(function(){
-			$('#users').click(function(){
-					window.location.href='administrator.html';
-			});
-			$('#restaurants').click(function(){
-				window.location.href='index.html';
-			});
-			$('#profile').click(function(){
-				window.location.href='userProfile.html';
-			});
-			$('#delivererAdd').click(function(){
-				window.location.href='delivererRegister.html';
-			});
-			$('#managerAdd').click(function(){
-				window.location.href='managerRegister.html';
-			});
-			$('#restaurantAdd').click(function(){
-				window.location.href='restaurantAdd.html';
-			});
-			
-			$("#tableBody tr").click(function() {
-			    var selected = $(this).hasClass("selected");
-			    $("#tableBody tr").removeClass("selected");
-			    if(!selected)
-			            $(this).addClass("selected");
-			});
-		});
-
-		function sortTable(n) {
-			var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-			table = document.getElementById("usersTable");
-			switching = true;
-			dir = "asc";
-			while (switching) {
-				switching = false;
-				rows = table.rows;
-				for (i = 1; i < (rows.length - 1); i++) {
-					shouldSwitch = false;
-					x = rows[i].getElementsByTagName("TD")[n];
-					y = rows[i + 1].getElementsByTagName("TD")[n];
-
-					if (dir == "asc") {
-						if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-							shouldSwitch = true;
-							break;
-						}
-					} else if (dir == "desc") {
-						if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-							shouldSwitch = true;
-							break;
-						}
-					}
-				}
-				if (shouldSwitch) {
-					rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-					switching = true;
-					switchcount ++;
-				} else {
-					if (switchcount == 0 && dir == "asc") {
-						dir = "desc";
-						switching = true;
-					}
-				}
-			}
-		}
-	</script>
 </body>
 </html>
