--- a/WebShopREST/WebShopREST/WebContent/html/delivererRegister.html
+++ b/WebShopREST/WebShopREST/WebContent/html/delivererRegister.html
@@ -11,7 +11,7 @@
 		<h1 id="titleText">WebShop</h1>
 	</header>
     <div class="container">
-        <div class="text">Registracija Dobavljača</div>
+        <div class="text">Registracija Dostavljača</div>
         <form action="#">
             <div class="data">
                 <label>Korisničko ime *</label>
