brisanje iz tabele

--- a/WebShopREST/WebShopREST/WebContent/html/administrator.html
+++ b/WebShopREST/WebShopREST/WebContent/html/administrator.html
@@ -37,11 +37,10 @@
 			</select>
 		</div>
 		<div style="height: 50px;"></div>
-		<div style="text-align: center; margin: 0 auto; width: 800px;">
-			<button class="administratorBtns">Obriši korisnika</button>
+		<div style="text-align: center; margin: 0 auto; width: 600px;">
+			<button class="administratorBtns" id="removeUser">Obriši korisnika</button>
 			<button class="administratorBtns" id="delivererAdd">Dodaj dostavljača</button>
 			<button class="administratorBtns" id="managerAdd">Dodaj menadžera</button>
-			<button class="administratorBtns" id="restaurantAdd">Dodaj restoran</button>
 		</div>
 		<div style="height: 50px;"></div>
 		<div>
