--- a/WebShopREST/WebShopREST/WebContent/html/index.html
+++ b/WebShopREST/WebShopREST/WebContent/html/index.html
@@ -46,6 +46,11 @@
 			<label style="color: black; font-weight: bold; font-size: 13pt;" >Otvoren</label>
 		</div>
 		<div style="height: 50px;"></div>
+		<div style="text-align: center; margin: 0 auto; width: 400px;">
+			<button class="actionBtns" id="removeRestaurant">Obriši restoran</button>
+			<button class="actionBtns" id="restaurantAdd">Dodaj restoran</button>
+		</div>
+		<div style="height: 50px;"></div>
 		<table id="restaurantsTable">
 			<thead>
 				<tr>
